--- a/config/cluster.json.sample
+++ b/config/cluster.json.sample
@@ -1,5 +1,5 @@
 {
-  "schema": "iglu:com.snowplowanalytics.dataflowrunner/ClusterConfig/avro/1-0-0",
+  "schema": "iglu:com.snowplowanalytics.dataflowrunner/ClusterConfig/avro/1-1-0",
   "data": {
     "name": "dataflow-runner - cluster name",
     "logUri": "s3://logs/",
@@ -67,6 +67,7 @@
           "Mapreduce.user.classpath.first": "true"
         }
       }
-    ]
+    ],
+    "applications": [ "Hadoop", "Spark" ]
   }
 }
