Add support for EBS volume attachment to instance groups (closes #4)

--- a/config/cluster.json.sample
+++ b/config/cluster.json.sample
@@ -22,7 +22,20 @@
       },
       "instances": {
         "master": {
-          "type": "m1.medium"
+          "type": "m1.medium",
+          "ebsConfiguration": {
+            "ebsOptimized": true,
+            "ebsBlockDeviceConfigs": [
+              {
+                "volumesPerInstance": 12,
+                "volumeSpecification": {
+                  "iops": 8,
+                  "sizeInGB": 10,
+                  "volumeType": "gp2"
+                }
+              }
+            ]
+          }
         },
         "core": {
           "type": "m1.medium",
