Add Consul-based locking (closes #17)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: go
 go:
   - 1.8
 
+before_script:
+  - wget https://releases.hashicorp.com/consul/0.8.3/consul_0.8.3_linux_amd64.zip
+  - unzip consul_0.8.3_linux_amd64.zip
+  - export PATH=$PATH:$PWD
+
 script:
   - make all
   - make goveralls
