Add ability to set the a SecurityConfiguration in RunJobFlowInput (close #78)

--- a/config/cluster.json.sample
+++ b/config/cluster.json.sample
@@ -80,6 +80,7 @@
         }
       }
     ],
-    "applications": [ "Hadoop", "Spark" ]
+    "applications": [ "Hadoop", "Spark" ],
+    "securityConfiguration": "mySecConfig"
   }
 }
