--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,3 +46,22 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         asset_paths: '["./build/bin/*.zip"]'
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push to DockerHub
+      uses: docker/build-push-action@v3
+      with:
+        platforms: linux/amd64,linux/arm64/v8,windows/amd64,darwin
+        push: true
+        tags: snowplow/dataflow-runner:latest,snowplow/dataflow-runner:${{ steps.get_version.outputs.VERSION }}
