--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,3 +46,15 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         asset_paths: '["./build/bin/*.zip"]'
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Create image
+      run: make docker-build
+
+    - name: Publish to DockerHub
+      run: make docker-publish
