--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,23 +47,14 @@ jobs:
     #   with:
     #     asset_paths: '["./build/bin/*.zip"]'
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push to DockerHub
-      uses: docker/build-push-action@v3
-      with:
-        file: $GITHUB_WORKSPACE/Dockerfile
-        build-args: DF_RUNNER_HOME=$GITHUB_WORKSPACE
-        platforms: linux/amd64,linux/arm64/v8
-        push: true
-        tags: snowplow/dataflow-runner:latest,snowplow/dataflow-runner:${{ steps.get_version.outputs.VERSION }}
+    - name: Create image
+      run: make docker-build
+
+    - name: Publish to DockerHub
+      run: make docker-publish
