--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,6 +47,12 @@ jobs:
     #   with:
     #     asset_paths: '["./build/bin/*.zip"]'
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
@@ -54,7 +60,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Create image
-      run: make docker-build
+      run: make docker-cross-build
 
     - name: Publish to DockerHub
       run: make docker-publish
