--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,14 +47,17 @@ jobs:
       with:
         asset_paths: '["./build/bin/*.zip"]'
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Create image
-      run: make docker-build
-
-    - name: Publish to DockerHub
-      run: make docker-publish
+    - name: Publish docker image
+      run: make docker-cross-build-publish
